[project]
name = "experiment-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]>=0.9.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "nvidia-cusparse-cu12>=12.5.10.65",
]
